# langshardway

./: .gitignore
migrations/: .env
rust/: Cargo.toml
rust/migrations/2023-07-01-104920_create_post/: up.sql
rust/src/: dao.rs  db.rs  encode.rs  main.rs  models.rs  server.rs
scala/: build.sbt
scala/.bloop/: scala-test.json  scala.json
scala/.bloop/scala/bloop-internal-classes/classes-Metals-UZgfCBY3QIWA_I8l275kGg==-1NHVFl0iSEWUBSAee5_pWg==/main/: Expr.tasty  Main.tasty  PositionExpr.tasty
scala/.metals/: metals.mv.db
scala/.metals/.reports/metals/: r_scala-toplevel-mtags_1690637026009  r_scala-toplevel-mtags_1690637212374
scala/.metals/.reports/metals-full/: r_compiler-error_1690639491594
scala/src/main/scala/: Main.scala
src/: dao.rs  main.rs  server.rs
zig/: build.zig  build.zig.zon
zig/src/: http.zig  main.zig  server.zig
