[package]
name = "quicq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
signal-hook = "0.3.15"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
hyper = {version="0.14", features = ["full"]}
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
diesel = {version = "2.1.0", features = ["postgres"]}
futures = "0.3"
futures-util = "0.3"

